--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,9 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import "../styles/global.css";
 ---
 
 <Layout>
   <!-- COMPONENT -->
-  <h1>Index Page!</h1>
+  <h1 class="text-blue-500">Index Page!</h1>
 </Layout>
-
-<style>
-  h1 {
-    color: red;
-  }
-</style>
