--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,5 +5,5 @@ import "../styles/global.css";
 
 <Layout>
   <!-- COMPONENT -->
-  <h1 class="text-blue-500">Index Page!</h1>
+  <h1 class="text-preset-1">Index Page!</h1>
 </Layout>
