--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,35 +1,23 @@
 @import "tailwindcss";
 
-
-html,
-body {
-	margin: 0;
-	width: 100%;
-	height: 100%;
+@font-face {
+    font-family: 'DM Sans';
+    src: url('../../public/assets/fonts/DM_Sans/DMSans-VariableFont_opsz\,wght.ttf');
 }
 
+/* @font-face {
+    font-family: 'DM Sans';
+    src: url('../../public/assets/fonts/DM_Sans/DMSans-Italic-VariableFont_opsz\,wght.ttf');
+} */
 
-@layer components {
-  /* .typography {
-    p {
-      font-size: var(--text-base);
-      color: var(--color-gray-700);
-    }
-    h1 {
-      font-size: var(--text-2xl--line-height);
-      font-weight: var(--font-weight-semibold);
-      color: var(--color-gray-950);
-    }
-    h2 {
-      font-size: var(--text-xl);
-      font-weight: var(--font-weight-semibold);
-      color: var(--color-gray-950);
-    }
-  } */
+@font-face {
+    font-family: 'Fira Code';
+    src: url('../../public/assets/fonts/Fira_Code/FiraCode-VariableFont_wght.ttf');
 }
+
 
 @theme {
-    --font-sans: ui-sans-serif, system-ui, sans-serif;
+    --font-sans: 'DM Sans';
     --color-*: initial;
     --color-neutral-900 : #1C1A19;
     --color-neutral-800 : #201E1D;
@@ -44,7 +32,7 @@ body {
     --color-blue-500 : #93CEFC;
     --color-blue-700 : #75B0DE;
     --color-blue-800 : #5792C0;
-    --color-blue-700 : #022B4A;
+    --color-blue-900 : #022B4A;
 
     --color-green-200 : #E9F5EA;
     --color-green-500 : #9DD3A9;
@@ -57,5 +45,85 @@ body {
     --color-yellow-900 : #4A3003;
 
     --color-red-400 : #F04438;
-    --color-red-600 : #D92D2;
+    --color-red-600 : #D92D20;
+}
+
+@layer components {
+    .text-preset-1 {
+        font-size: 40px;
+        font-weight: 800;
+        line-height: 130%;
+        letter-spacing: -1px;
+    }
+
+    .text-preset-2 {
+        font-size: 32px;
+        font-weight: 800;
+        line-height: 130%;
+        letter-spacing: -0.5px;
+    }
+
+    .text-preset-3 {
+        font-size: 28px;
+        font-weight: 700;
+        line-height: 130%;
+        letter-spacing: -0.5px;
+    }
+
+    .text-preset-4 {
+        font-size: 24px;
+        font-weight: 600;
+        line-height: 130%;
+        letter-spacing: -0.5px;
+    }
+
+    .text-preset-5 {
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 130%;
+        letter-spacing: -0.5px;
+    }
+
+    .text-preset-6 {
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 150%;
+        letter-spacing: -0.5px;
+    }
+
+    .text-preset-7 {
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 150%;
+        letter-spacing: -0.2px;
+    }
+
+    .text-preset-7-semibold {
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 150%;
+        letter-spacing: -0.2px;
+    }
+
+    .text-preset-8 {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 130%;
+        letter-spacing: -0.2px;
+    }
+
+    .text-preset-8-italic {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 130%;
+        letter-spacing: -0.2px;
+        font-style: italic;
+    }
+
+    .text-preset-9 {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 146%;
+        letter-spacing: -0.4px;
+    }
 }
