--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,8 @@
+---
+import Navbar from "../components/Navbar.astro";
+import Footer from "../components/Footer.astro";
+---
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -8,6 +13,15 @@
     <title>Astro Basics</title>
   </head>
   <body>
-    <slot />
+    <div class="w-full max-w-[640px]">
+      <Navbar client:load />
+      <!-- content -->
+      <div class="w-full h-[100vh] px-2">
+        <div class="flex flex-col h-full border-x border-neutral-700 pt-8 px-2">
+          <slot />
+          <Footer />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
