--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Navbar from "../components/Navbar.astro";
 import Footer from "../components/Footer.astro";
+import "../styles/global.css";
 ---
 
 <!doctype html>
@@ -8,16 +9,23 @@ import Footer from "../components/Footer.astro";
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href={import.meta.env.BASE_URL + "/assets/images/favicon-32x32.png"}
+    />
     <meta name="generator" content={Astro.generator} />
     <title>Astro Basics</title>
   </head>
   <body>
     <div class="w-full max-w-[640px]">
       <Navbar client:load />
-      <!-- content -->
+      <!-- outer padding -->
       <div class="w-full h-[100vh] px-2">
-        <div class="flex flex-col h-full border-x border-neutral-700 pt-8 px-2">
+        <!-- borders -->
+        <div
+          class="flex flex-col gap-8 lg:gap-12 h-fit border-x border-neutral-700 pt-8 px-2"
+        >
           <slot />
           <Footer />
         </div>
