--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ import "../styles/global.css";
   </head>
   <body>
     <div class="w-full max-w-[640px]">
-      <Navbar client:load />
+      <Navbar />
       <!-- outer padding -->
       <div class="w-full h-[100vh] px-2">
         <!-- borders -->
