--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,10 +2,10 @@
 import Divider from "./Divider.astro";
 
 const navLinks = [
-  { name: "Home", href: "/" },
-  { name: "Blog", href: "/blog" },
-  { name: "About", href: "/about" },
-  { name: "Newsletter", href: "/newsletter" },
+  { name: "Home", href: import.meta.env.BASE_URL },
+  { name: "Blog", href: import.meta.env.BASE_URL + "/blog" },
+  { name: "About", href: import.meta.env.BASE_URL + "/about" },
+  { name: "Newsletter", href: import.meta.env.BASE_URL + "/newsletter" },
 ];
 ---
 
@@ -68,10 +68,7 @@ const navLinks = [
                 {navLink.name}
               </a>
             </li>
-            {index < navLinks.length - 1 && (
-              <Divider />
-              //   <hr class="w-full border-0.5 border-neutral-700" />
-            )}
+            {index < navLinks.length - 1 && <Divider />}
           </>
         ))
       }
