--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -36,7 +36,7 @@ const socials = [
               : ""
           }
         >
-          <img src={social.image} alt={social.name} />
+          <img class="text-neutral-0" src={social.image} alt={social.name} />
         </a>
       </li>
     ))
