--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,41 @@
 ---
+import Divider from "../components/Divider.astro";
 import Layout from "../layouts/Layout.astro";
+import { formatDate } from "../scripts/formatDate";
+
+const allPosts = Object.values(
+  import.meta.glob("../content/blog/*.md", { eager: true })
+);
 ---
 
-<Layout> <section>aaa</section> </Layout>
+<Layout>
+  <section class="flex flex-col gap-4">
+    <div>
+      <h2>My Articles</h2>
+      <p>
+        Below are all my recent blog posts. Click on any title to read the full
+        article.
+      </p>
+    </div>
+    <Divider />
+    <div class="flex flex-col gap-5">
+      {
+        allPosts.map((post: any, index) => (
+          <>
+            <div class="flex flex-col gap-2">
+              <a class="text-preset-5 hover:cursor-pointer" href={post.url}>
+                {post.frontmatter.title}
+              </a>
+              <p class="text-preset-8-italic">
+                {formatDate(post.frontmatter.publishedAt)}
+              </p>
+              <p>{post.frontmatter.description}</p>
+              <p>{post.frontmatter.tags}</p>
+            </div>
+            {index < allPosts.length - 1 ? <Divider /> : ""}
+          </>
+        ))
+      }
+    </div>
+  </section>
+</Layout>
