--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Divider from "../components/Divider.astro";
-import RecentArticles from "../components/RecentArticles.astro";
+import LatestArticles from "../components/LatestArticles.astro";
 import Socials from "../components/Socials.astro";
 import Layout from "../layouts/Layout.astro";
 ---
@@ -24,5 +24,5 @@ import Layout from "../layouts/Layout.astro";
     <Socials size="large" />
   </section>
   <Divider />
-  <RecentArticles />
+  <LatestArticles />
 </Layout>
