--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -46,6 +46,22 @@ import Layout from "../layouts/Layout.astro";
       I absolutely love my workspace as a place that inspires me to do my best
       work, so I thought I’d share it with you:
     </p>
+    <div class="w-full overflow-hidden rounded-lg md:rounded-xl">
+      <img
+        class="md:hidden"
+        src="/public/assets/images/image-workspace-small.jpg"
+        alt="image-workspace-small"
+      />
+      <img
+        class="hidden md:flex"
+        src="/public/assets/images/image-workspace-large.jpg"
+        alt="image-workspace-large"
+      />
+    </div>
+    <p>
+      I hope this blog not only documents my growth but also helps others see
+      that coding can be for everyone. Thanks for joining me on this journey!
+    </p>
 
     <h4>Follow me</h4>
     <Socials size="large" />
