--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -93,7 +93,7 @@
         color: var(--color-neutral-0);
     }
 
-    h6, .text-preset-6 {
+    h6, thead, .text-preset-6 {
         font-size: 18px;
         font-weight: 500;
         line-height: 150%;
@@ -101,7 +101,7 @@
         color: var(--color-neutral-0);
     }
 
-    p, li, .text-preset-7 {
+    p, li, blockquote, .text-preset-7 {
         font-size: 18px;
         font-weight: 400;
         line-height: 150%;
@@ -117,7 +117,7 @@
         color: var(--color-neutral-400);
     }
 
-    span, .text-preset-8 {
+    span, tbody, .text-preset-8 {
         font-size: 16px;
         font-weight: 400;
         line-height: 130%;
@@ -134,7 +134,7 @@
         font-style: italic;
     }
 
-    .text-preset-9 {
+    .text-preset-9, code {
         font-family: 'Fira Code';
         font-size: 16px;
         font-weight: 400;
@@ -144,5 +144,86 @@
 
     svg {
         fill: currentColor;
+    }
+    hr {
+        border-width: 1px;
+        border-color: var(--color-neutral-700);
+    }
+
+    ol {
+        list-style: decimal;
+        padding-left: 2rem;
+    }
+
+    table {
+        display: block;
+        overflow-x: auto;
+        width: 100%;
+        outline: 2px solid var(--color-neutral-700);
+        border-radius: 8px;
+        border-collapse: separate;
+        border-spacing: 0;
+        background: none;
+    }
+    table code {
+        white-space: nowrap;
+    }
+    thead {
+        text-align: left;
+        overflow: hidden;
+        border-radius: 20px;
+    }
+
+    tbody {
+        text-align: left;
+    }
+
+    th, td {
+        border: 1px solid var(--color-neutral-700);
+        padding: 6px 12px;
+        background: none;
+    }
+    /* Remove outer borders on table edge */
+    table tr:first-child th {
+    border-top: none;
+    }
+
+    table tr:last-child td {
+    border-bottom: none;
+    }
+
+    table tr td:first-child,
+    table tr th:first-child {
+    border-left: none;
+    }
+
+    table tr td:last-child,
+    table tr th:last-child {
+    border-right: none;
+    }
+
+    code {
+        background-color: var(--color-neutral-700);
+        padding: 1px 2px;
+        border-radius: 4px
+    }
+
+    pre {
+        background: var(--color-neutral-800);
+        border-radius: 12px;
+        border: 1px solid var(--color-neutral-700);
+        padding: 10px;
+        overflow-x: auto;
+
+    }
+    pre code {
+        background-color: var(--color-neutral-800);
+        border-radius: 10px
+    }
+
+    blockquote {
+        /* background-color: red; */
+        border-left: 4px solid var(--color-neutral-600);
+        padding: 6px 12px
     }
 }
