--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -24,7 +24,9 @@ const socials = [
 ];
 ---
 
-<ul class=`flex items-center ${size == 'large' ? 'gap-3' : 'gap-4'}`>
+<ul
+  class=`flex items-center ${size == 'large' ? 'gap-3' : 'gap-4'} list-none pl-0`
+>
   {
     socials.map((social) => (
       <li>
