--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -150,6 +150,11 @@
         border-color: var(--color-neutral-700);
     }
 
+    ul {
+        list-style: disc;
+        padding-left: 2rem;
+    }
+    
     ol {
         list-style: decimal;
         padding-left: 2rem;
@@ -202,27 +207,21 @@
     border-right: none;
     }
 
-    code {
+    li code, p code {
         background-color: var(--color-neutral-700);
         padding: 1px 2px;
         border-radius: 4px
     }
 
     pre {
-        background: var(--color-neutral-800);
+        background: var(--color-neutral-900);
         border-radius: 12px;
         border: 1px solid var(--color-neutral-700);
         padding: 10px;
         overflow-x: auto;
-
-    }
-    pre code {
-        background-color: var(--color-neutral-800);
-        border-radius: 10px
     }
 
     blockquote {
-        /* background-color: red; */
         border-left: 4px solid var(--color-neutral-600);
         padding: 6px 12px
     }
