--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,6 +42,7 @@
 
     --color-red-400 : #F04438;
     --color-red-600 : #D92D20;
+
 }
 
 @layer components {
@@ -109,6 +110,12 @@
         color: var(--color-neutral-400);
     }
 
+    blockquote {
+        color: var(--color-neutral-0);
+        border-left: 4px solid var(--color-neutral-600);
+        padding: 6px 12px
+    }
+
     .text-preset-7-semibold {
         font-size: 18px;
         font-weight: 500;
@@ -154,7 +161,7 @@
         list-style: disc;
         padding-left: 2rem;
     }
-    
+
     ol {
         list-style: decimal;
         padding-left: 2rem;
@@ -214,15 +221,11 @@
     }
 
     pre {
-        background: var(--color-neutral-900);
+        /* background: var(--color-neutral-900); */
+        /* background-color: red; */
         border-radius: 12px;
         border: 1px solid var(--color-neutral-700);
         padding: 10px;
         overflow-x: auto;
-    }
-
-    blockquote {
-        border-left: 4px solid var(--color-neutral-600);
-        padding: 6px 12px
     }
 }
