--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,7 +42,6 @@
 
     --color-red-400 : #F04438;
     --color-red-600 : #D92D20;
-
 }
 
 @layer components {
@@ -215,17 +214,31 @@
     }
 
     li code, p code {
-        background-color: var(--color-neutral-700);
-        padding: 1px 2px;
-        border-radius: 4px
+    background-color: var(--color-neutral-700);
+    padding: 1px 2px;
+    border-radius: 4px;
+    color: var(--color-neutral-0);
     }
 
     pre {
-        /* background: var(--color-neutral-900); */
-        /* background-color: red; */
-        border-radius: 12px;
-        border: 1px solid var(--color-neutral-700);
-        padding: 10px;
-        overflow-x: auto;
+    border-radius: 12px;
+    border: 1px solid var(--color-neutral-700);
+    padding: 10px;
+    overflow-x: auto;
     }
+
+    blockquote:has(> strong:contains("NOTE")) {
+    border-left: 4px solid #007acc;
+    background: #e6f4ff;
+    padding: 1em;
+    border-radius: 6px;
+    }
+
+    blockquote:has(> strong:contains("WARNING")) {
+    border-left: 4px solid #e69b00;
+    background: #fff4e5;
+    padding: 1em;
+    border-radius: 6px;
+    }
+    
 }
