--- a/src/pages/newsletter.astro
+++ b/src/pages/newsletter.astro
@@ -18,6 +18,6 @@ import NewsletterForm from "../components/NewsletterForm.astro";
       journey!
     </h5>
 
-    <NewsletterForm client:load />
+    <NewsletterForm />
   </section>
 </Layout>
