--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ import "../styles/global.css";
       href={import.meta.env.BASE_URL + "/assets/images/favicon-32x32.png"}
     />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro Basics</title>
+    <title>Personal Blog</title>
   </head>
   <body>
     <div class="w-full max-w-[640px]">
